Classes/.clang-completion-error
/Users/xuyecheng/Documents/ios/iPlan/Classes/ModuleXMLParser.m:24:8: error: use of undeclared identifier 'super'
    if(super !=nil)
       ^
1 error generated.
